--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	
 </head>
 <body onload="">
-	<h1 id="meri_website_hai_ye_to">Meri website hai ye to</h1>
+	<h1 id="meri_website_hai_ye_to">Will be updating very soon</h1>
 	<p>lol is god.</p>
 </body>
