--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<title>Demo-Website</title>
 	<link rel="stylesheet" href="stylesheet/style.css" type="text/css"  charset="utf-8">
-	djfhdhgfhdfgdhfgdh
-	
+	<script src="js/script.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 	<div id="page-container">
